@@ -102,6 +102,7 @@ export(getLatentCoefficients)
 export(RRPlot)
 export(adjustProb)
 export(ppoisGzero)
+export(meanTimeToEvent)
 export(CalibrationProbPoissonRisk)
 export(CoxRiskCalibration)
 export(concordance95ci)
